# Ai-Switch

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  WARP.md  check-db.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml  release.yml
.opencode/skill/code-review/: SKILL.md
.opencode/skill/git-commit/: SKILL.md
docs/: ARCHITECTURE.md  AUTO_IMPORT_PROVIDER.md  BUGS.md  DEEP_LINK.md  DEV_ENV_MANAGEMENT.md  WARP_API_REFERENCE.md
scripts/: check_db.py  generate-icons.js
src/: App.vue  cli.rs  error.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: core.json  deep-link.json  dialog.json  store.json  updater.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/windows/: hooks.nsh
src/components/: ApplyDialog.vue  ConfirmDialog.vue  DeepLinkDialog.vue  DeployedProvidersDialog.vue  DetailPanel.vue  FetchModelsDialog.vue  LanguageSwitch.vue  ModelDialog.vue  ModelList.vue  ProviderDialog.vue  ProviderList.vue  UpdateDialog.vue
src/config/: models.rs  providerPresets.ts
src/i18n/: index.ts
src/router/: index.ts
src/stores/: providers.ts
src/styles/: main.css
src/tui/: app.rs  event.rs  mod.rs  terminal.rs  types.rs
src/utils/: mod.rs  output.rs  skipLoginApi.ts
src/views/: BackupView.vue  ClaudeCodeView.vue  CodexView.vue  DevEnvView.vue  GeminiView.vue  McpView.vue  OhMyView.vue  PromptsView.vue  ProvidersView.vue  SkillView.vue  SpeedTestView.vue  StatusView.vue  UsageView.vue
(+73 files in other folders)
