[package]
name = "opcd"
version = "0.6.3"
edition = "2021"
description = "Coding Agent配置管理CLI工具"
authors = ["moguw <weiyiding0@gmail.com>"]
license = "MIT"
repository = "https://github.com/Mieluoxxx/opcd.git"
homepage = "https://github.com/Mieluoxxx/opcd#readme"
keywords = ["opencode", "coding-agent", "config-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "opcd"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "cargo"] }

# TUI framework (Ratatui)
ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.11"

# CLI 交互工具
dialoguer = "0.11"
console = "0.15"

# 异步运行时
tokio = { version = "1.41", features = ["full"] }

# HTTP 客户端 (用于站点检测)
reqwest = { version = "0.12", features = ["json", "stream"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"
thiserror = "2.0"

# 系统路径
dirs = "5.0"

# 文件操作
fs_extra = "1.3"

# 其他工具
chrono = "0.4"
toml = "0.8"        # TOML 配置文件处理
opener = "0.7"      # 打开文件/URL
url = "2.5"         # URL 解析和验证
hostname = "0.4"    # 获取主机名
